pv,pvc/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: default
  labels:
    app: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 10
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 600
  template:
    metadata:
      labels:
        app: my-app
    spec:
      terminationGracePeriodSeconds: 30
      volumes:
      - name: my-volume
        persistentVolumeClaim:
          claimName: my-pvc
      - name: config-volume
        configMap:
          name: my-configmap
          items:
          - key: file
            path: file
      - name: nginx-config
        configMap:
          name: my-configmap
          items:
          - key: nginx.conf
            path: nginx.conf
      containers:
      - name: my-container
        image: nginx:stable-alpine3.23
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: my-volume
          mountPath: /usr/share/nginx/html/data
        - name: config-volume
          mountPath: /homework/conf
          readOnly: true
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
          readOnly: true
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
